Fixed z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,6 +63,7 @@ li {
 .navbar {
 	background: transparent;
   margin-bottom: 0;
+  z-index: 1;
 }
 .navbar a {
   color: var(--accent-complementary);
@@ -182,6 +183,7 @@ li {
   padding: 5px;
   width: 100%;
   background-color: white;
+  z-index: 2;
 }
 #viewer-count {
   margin: 5px 0;
